# HyprKeys

./: README.md  pyproject.toml
aur/hyprkeys-git/: .SRCINFO  PKGBUILD
data/: io.github.olalbns.hyprkeys.desktop
hyprkeys/: __init__.py  app.py  parser.py
